@@ -326,6 +326,10 @@ AElFTkSuQmCC
 	TileImgs["letter-plus"] = []byte(`iVBORw0KGgoAAAANSUhEUgAAABAAAAAYCAIAAAB8wupbAAAAMElEQVQ4jWNgGAVQ8P///////2OV
 YiLVLNprYISzcDkaqo6RkUwbsIOhFUqjYIgCACGbDwS8lF+4AAAAAElFTkSuQmCC
 `)
+	TileImgs["letter-portal"] = []byte(`iVBORw0KGgoAAAANSUhEUgAAABAAAAAYCAIAAAB8wupbAAAAWElEQVQ4je2SMQ4AIAgDxf//uQ4O
+Ji1iVBYTGaG1R6SURwoAAHdkrnqMjQU1h0ejpgkkUs82kmPQRacGAuhOal4g9ZdinnWCUp1+XHA8
+lGDaivEybumXVANG7Sz8egYphAAAAABJRU5ErkJggg==
+`)
 	TileImgs["letter-q"] = []byte(`iVBORw0KGgoAAAANSUhEUgAAABAAAAAYCAIAAAB8wupbAAAAX0lEQVQ4je1RQQ7AIAizxv9/uTuQ
 6FZQ4wFP68kCLaSW8iMBEE7y0wasAiAQyLQo7dH8dO+FFnXmFNIhkEMX0A1pAjtmkdJ0w1tD0lsc
 /0MNq5363JrwbbLXYk0UHOMB6oshKB0gbnMAAAAASUVORK5CYII=
@@ -1056,6 +1060,11 @@ jk3PlmHbpnXjso7rw6b308P/69//HBz/HBz/HBz/HBz/HBz/HBz/HBysfHz/HBz/HBz/HBz/HBwA
 AABXYnq0tLRtbW1fGku6AAAAD3RFWHRTb2Z0d2FyZQBHcmFmeDKgolNqAAAAM0lEQVQYlWNgoBNg
 RALofLAIRBimmHgBqH64AMxEJAEIgzIBdJei+gXDs3h8j+l/LMEFAFrWAI/HkedyAAAAAElFTkSu
 QmCC
+`)
+	TileImgs["map-portal"] = []byte(`iVBORw0KGgoAAAANSUhEUgAAABAAAAAYCAIAAAB8wupbAAAAA3NCSVQICAjb4U/gAAAAGnRFWHRT
+b2Z0d2FyZQBUayBUb29sa2l0IHY4LjYuOK3Fod8AAABSSURBVHic7VFBDgAgCPL/n65DzS1lRHaV
+E1MRKbNGCePEfVQp7gbfxUqL5wqYVghez3l0zCdhAd+NHbznr8kyVBzeMui8+g85upoBIgoUfAh0
+TAyfEvz9iiM2AAAAAElFTkSuQmCC
 `)
 	TileImgs["map-potion"] = []byte(`iVBORw0KGgoAAAANSUhEUgAAABAAAAAYCAMAAADEfo0+AAADAFBMVEUAAAD///8A/wD/+wCC/wAA
 /wAA/30A//8Agv8AAP95AP/PAP//ANf/AIL/AAD/fQDLmkWWPBhhAAD/94LD/4KC/4KC/76C//+C
