@@ -139,6 +139,7 @@ var MapNames = map[rune]string{
 	')':  "rparen",
 	'(':  "lparen",
 	'>':  "stairs",
+	'Δ':  "portal",
 	'!':  "potion",
 	';':  "semicolon",
 	'_':  "stone",
@@ -184,6 +185,7 @@ var LetterNames = map[rune]string{
 	'”':  "rquotes",
 	'=':  "equal",
 	'>':  "gt",
+	'Δ':  "portal",
 	'¤':  "frontier",
 	'√':  "hit",
 	'Φ':  "magic",
