@@ -6,6 +6,8 @@ v0.13-dev
   and this works faster, specially on some platforms.
 + Fix unintuitive interaction between dancing rapier and tiny harpies blinking.
 + New tile for doors, backported from Harmonist.
++ New tile for “magical stairs”, now more like a “real” monolith, backported
+  from Harmonist.
 + Update wasm version to latest API.
 + Do not print rod of lightning message when no targets.
 + You can now use arrow keys in menus too. Backported from Harmonist.
